--- a/main.html
+++ b/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>ЦГБ-Н — Главная</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -80,23 +80,23 @@
             <p>Добро пожаловать, <span id="user-name">...</span></p>
 
             <label for="user-position">Ваша должность:</label>
-            <input type="text" id="user-position" placeholder="Например: Заведующий отделением">
+            <input type="text" id="user-position" placeholder="Например: Заведующий отделением" />
 
             <label for="user-signature">Ваша подпись (ФИО полностью):</label>
-            <input type="text" id="user-signature" placeholder="Иванов Иван Иванович">
+            <input type="text" id="user-signature" placeholder="Иванов Иван Иванович" />
         </div>
 
         <div class="order-form">
             <h2>📜 Создание приказа</h2>
 
             <label for="new-employee">ФИО нового сотрудника:</label>
-            <input type="text" id="new-employee" placeholder="Иванов Иван Иванович">
+            <input type="text" id="new-employee" placeholder="Иванов Иван Иванович" />
 
             <label for="employee-position">Должность сотрудника:</label>
-            <input type="text" id="employee-position" placeholder="Фельдшер">
+            <input type="text" id="employee-position" placeholder="Фельдшер" />
 
             <label for="accept-date">Дата принятия:</label>
-            <input type="date" id="accept-date">
+            <input type="date" id="accept-date" />
 
             <button onclick="generateAcceptOrder()">Сгенерировать приказ</button>
 
@@ -107,5 +107,52 @@
     </div>
 
     <script>
-        // Получаем данные из localStorage после входа через VK
-        const user
+        // При загрузке страницы подставляем имя пользователя из localStorage
+        window.onload = function() {
+            const userName = localStorage.getItem("userName");
+            if (!userName) {
+                alert("Пожалуйста, выполните вход через VK.");
+                window.location.href = "login.html";
+                return;
+            }
+            document.getElementById("user-name").textContent = userName;
+        };
+
+        function generateAcceptOrder() {
+            const userName = localStorage.getItem("userName") || "Пользователь";
+            const userPosition = document.getElementById("user-position").value || "—";
+            const userSignature = document.getElementById("user-signature").value || "—";
+
+            const newEmployee = document.getElementById("new-employee").value;
+            const position = document.getElementById("employee-position").value;
+            const dateInput = document.getElementById("accept-date").value;
+            const date = dateInput ? new Date(dateInput).toLocaleDateString('ru-RU') : new Date().toLocaleDateString('ru-RU');
+
+            if (!newEmployee || !position) {
+                alert("Пожалуйста, заполните ФИО и должность нового сотрудника.");
+                return;
+            }
+
+            const orderText = `[ЦГБ-Н] Приказ о принятии #${Math.floor(Math.random() * 9000) + 1000}\n\n` +
+                `На основании заявления и трудового договора\n` +
+                `ПРИНИМАЮ:\n` +
+                `${newEmployee} на должность ${position}\n` +
+                `Дата вступления в должность: ${date}\n\n` +
+                `Подписано: ${userSignature}\n` +
+                `Должность подписанта: ${userPosition}`;
+
+            document.getElementById("result").textContent = orderText;
+        }
+
+        function copyToClipboard() {
+            const text = document.getElementById("result").textContent;
+            if (!text) {
+                alert("Сначала сгенерируйте приказ.");
+                return;
+            }
+            navigator.clipboard.writeText(text);
+            alert("Приказ скопирован!");
+        }
+    </script>
+</body>
+</html>
