--- a/index.html
+++ b/index.html
@@ -2,10 +2,59 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Моя страница входа</title>
+  <title>Вход через ВКонтакте</title>
+  <script src="https://vk.com/js/api/openapi.js?169"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 50px auto;
+      text-align: center;
+    }
+    button {
+      background-color: #4a76a8;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+    button:hover {
+      background-color: #3b5c7e;
+    }
+  </style>
 </head>
 <body>
-  <h1>Привет! Это страница входа</h1>
-  <button onclick="alert('Вход через VK здесь')">Войти через VK</button>
+
+  <h1>Вход через ВКонтакте</h1>
+  <button id="vkLoginBtn">Войти через VK</button>
+
+  <script>
+    // Инициализируем VK API (замени на свой appId)
+    VK.init({ apiId: 53689256 });
+
+    document.getElementById('vkLoginBtn').onclick = function() {
+      VK.Auth.login(function(response) {
+        if (response.session) {
+          // Авторизация успешна, можно получить имя
+          const user = response.session.user;
+          const userName = user.first_name + ' ' + user.last_name;
+
+          alert('Привет, ' + userName + '! Авторизация успешна.');
+
+          // Здесь можно сохранить userId или другую инфу в localStorage, если нужно
+          localStorage.setItem('vkUserId', user.id);
+          localStorage.setItem('vkUserName', userName);
+
+          // Перенаправляем на страницу генератора приказов
+          window.location.href = 'main.html';
+        } else {
+          alert('Авторизация не прошла.');
+        }
+      }, 4); // 4 — доступ к профилю пользователя
+    };
+  </script>
+
 </body>
 </html>
