--- a/login.html
+++ b/login.html
@@ -15,46 +15,51 @@
     <h2>Авторизация через ВКонтакте</h2>
     <button onclick="loginVK()">Войти через VK</button>
 
-    <script>
-        // Firebase конфигурация
-        const firebaseConfig = {
-            apiKey: "AIzaSyA8OSXuugRELrHVNGwaawKacppy6i9gFiU",
-            authDomain: "mz-database-ff085.firebaseapp.com",
-            projectId: "mz-database-ff085",
-            storageBucket: "mz-database-ff085.appspot.com",
-            messagingSenderId: "653569103334",
-            appId: "1:653569103334:web:00ee795c387f982a71b227",
-            measurementId: "G-XY09QY0EDY"
-        };
+<script>
+    // Инициализация Firebase
+    const firebaseConfig = {
+        apiKey: "AIzaSyA8OSXuugRELrHVNGwaawKacppy6i9gFiU",
+        authDomain: "mz-database-ff085.firebaseapp.com",
+        projectId: "mz-database-ff085",
+        storageBucket: "mz-database-ff085.appspot.com",
+        messagingSenderId: "653569103334",
+        appId: "1:653569103334:web:00ee795c387f982a71b227",
+        measurementId: "G-XY09QY0EDY"
+    };
 
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-        VK.init({ apiId: 53689256 });
+    // Инициализация VK API с новым apiId
+    VK.init({ apiId: 53689889 });
 
-        function loginVK() {
-            VK.Auth.login(function(response) {
-                if (response.session) {
-                    const userInfo = response.session.user;
-                    const userName = `${userInfo.first_name} ${userInfo.last_name}`;
+    function loginVK() {
+        VK.Auth.login(function(response) {
+            if (response.status === 'connected' || response.session) {
+                const userId = response.session.user.id;
+                const firstName = response.session.user.first_name;
+                const lastName = response.session.user.last_name;
+                const userName = `${firstName} ${lastName}`;
 
-                    // Сохраняем в Firestore
-                    db.collection("users").doc("vk_" + userInfo.id).set({
-                        name: userName,
-                        vkId: userInfo.id,
-                        lastLogin: new Date()
-                    }, { merge: true }).then(() => {
-                        // Сохраняем данные в localStorage для main.html
-                        localStorage.setItem("userName", userName);
-                        localStorage.setItem("userVKId", userInfo.id);
-                        // Редирект на главную страницу с приказами
-                        window.location.href = "main.html";
-                    });
-                } else {
-                    alert("Авторизация не удалась.");
-                }
-            }, 4);
-        }
-    </script>
+                db.collection("users").doc("vk_" + userId).set({
+                    name: userName,
+                    vkId: userId,
+                    lastLogin: firebase.firestore.FieldValue.serverTimestamp()
+                }, { merge: true })
+                .then(() => {
+                    localStorage.setItem("userName", userName);
+                    localStorage.setItem("userVKId", userId);
+                    window.location.href = "main.html";
+                })
+                .catch((error) => {
+                    alert("Ошибка при сохранении данных: " + error.message);
+                });
+            } else {
+                alert("Авторизация не удалась или пользователь не дал разрешение.");
+            }
+        }, 4);
+    }
+</script>
+
 </body>
 </html>
