--- a/login.html
+++ b/login.html
@@ -1,65 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>Вход — ЦГБ-Н</title>
-    <style>
-        body { font-family: Arial; max-width: 400px; margin: 50px auto; padding: 20px; text-align: center; }
-        button { background: #4CAF50; color: white; border: none; padding: 10px 15px; cursor: pointer; font-size: 16px; }
-    </style>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://vk.com/js/api/openapi.js?169"></script>
+  <meta charset="UTF-8">
+  <title>Вход — ЦГБ-Н</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 100px;
+    }
+  </style>
+
+  <!-- VK ID SDK -->
+  <script src="https://unpkg.com/@vkid/sdk@3.0.0"></script>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
 <body>
-    <h2>Авторизация через ВКонтакте</h2>
-    <button onclick="loginVK()">Войти через VK</button>
+  <h2>Вход через ВКонтакте</h2>
+  <div id="vk_button"></div>
 
-<script>
+  <script>
     // Инициализация Firebase
     const firebaseConfig = {
-        apiKey: "AIzaSyA8OSXuugRELrHVNGwaawKacppy6i9gFiU",
-        authDomain: "mz-database-ff085.firebaseapp.com",
-        projectId: "mz-database-ff085",
-        storageBucket: "mz-database-ff085.appspot.com",
-        messagingSenderId: "653569103334",
-        appId: "1:653569103334:web:00ee795c387f982a71b227",
-        measurementId: "G-XY09QY0EDY"
+      apiKey: "AIzaSyA8OSXuugRELrHVNGwaawKacppy6i9gFiU",
+      authDomain: "mz-database-ff085.firebaseapp.com",
+      projectId: "mz-database-ff085",
+      storageBucket: "mz-database-ff085.appspot.com",
+      messagingSenderId: "653569103334",
+      appId: "1:653569103334:web:00ee795c387f982a71b227",
+      measurementId: "G-XY09QY0EDY"
     };
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    // Инициализация VK API с новым apiId
-    VK.init({ apiId: 53689889 });
+    // Инициализация VK ID SDK
+    const VKID = window.VKIDSDK;
 
-    function loginVK() {
-        VK.Auth.login(function(response) {
-            if (response.status === 'connected' || response.session) {
-                const userId = response.session.user.id;
-                const firstName = response.session.user.first_name;
-                const lastName = response.session.user.last_name;
-                const userName = `${firstName} ${lastName}`;
+    VKID.Config.init({
+      app: 53689889, // Твой ID приложения
+      redirectUrl: window.location.href, // Перезагрузка этой же страницы
+      responseMode: VKID.ConfigResponseMode.Callback,
+      source: VKID.ConfigSource.WEB,
+    });
 
-                db.collection("users").doc("vk_" + userId).set({
-                    name: userName,
-                    vkId: userId,
-                    lastLogin: firebase.firestore.FieldValue.serverTimestamp()
-                }, { merge: true })
-                .then(() => {
-                    localStorage.setItem("userName", userName);
-                    localStorage.setItem("userVKId", userId);
-                    window.location.href = "main.html";
-                })
-                .catch((error) => {
-                    alert("Ошибка при сохранении данных: " + error.message);
-                });
-            } else {
-                alert("Авторизация не удалась или пользователь не дал разрешение.");
-            }
-        }, 4);
-    }
-</script>
+    const widget = new VKID.FloatingOneTap();
+    widget.render({
+      containerId: "vk_button",
+      appName: "ЦГБ-Н",
+      showAlternativeLogin: true
+    })
+    .on(VKID.WidgetEvents.ERROR, (e) => {
+      alert("Ошибка авторизации: " + e.message);
+    })
+    .on(VKID.FloatingOneTapInternalEvents.LOGIN_SUCCESS, (payload) => {
+      const code = payload.code;
+      const deviceId = payload.device_id;
 
+      // Обмен кода на данные пользователя
+      VKID.Auth.exchangeCode(code, deviceId)
+        .then((data) => {
+          const user = data.user;
+          const fullName = `${user.first_name} ${user.last_name}`;
+          const vkId = user.id;
+
+          // Сохраняем в Firestore
+          db.collection("users").doc("vk_" + vkId).set({
+            name: fullName,
+            vkId: vkId,
+            lastLogin: firebase.firestore.FieldValue.serverTimestamp()
+          }, { merge: true });
+
+          // Сохраняем в localStorage
+          localStorage.setItem("userName", fullName);
+          localStorage.setItem("userVKId", vkId);
+
+          // Редирект
+          window.location.href = "main.html";
+        })
+        .catch((err) => {
+          alert("Ошибка входа: " + err.message);
+        });
+    });
+  </script>
 </body>
 </html>
