--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>VKID Авторизация</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- VKID SDK -->
   <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
 
   <style>
@@ -19,67 +18,61 @@
       justify-content: center;
       font-family: Arial, sans-serif;
     }
-
-    #vkid-root {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 150px;
+    div {
+      /* Контейнер, куда вставляется виджет */
+      min-width: 280px;
     }
   </style>
 </head>
 <body>
 
-  <div id="vkid-root"></div>
+  <div>
+    <script type="text/javascript">
+      if ('VKIDSDK' in window) {
+        const VKID = window.VKIDSDK;
 
-  <script type="text/javascript">
-    if ('VKIDSDK' in window) {
-      const VKID = window.VKIDSDK;
+        VKID.Config.init({
+          app: 53689889,
+          redirectUrl: 'https://golfo-developer.github.io/mz/',
+          responseMode: VKID.ConfigResponseMode.Callback,
+          source: VKID.ConfigSource.LOWCODE,
+          scope: '', // Заполните нужными доступами по необходимости
+        });
 
-      VKID.Config.init({
-        app: 53689889,
-        redirectUrl: 'https://golfo-developer.github.io/mz/main.html',
-        responseMode: VKID.ConfigResponseMode.Callback,
-        source: VKID.ConfigSource.LOWCODE,
-        scope: '',
-      });
+        const oAuth = new VKID.OAuthList();
 
-      const floatingOneTap = new VKID.FloatingOneTap();
+        oAuth.render({
+          container: document.currentScript.parentElement,
+          oauthList: [
+            'vkid'
+          ]
+        })
+        .on(VKID.WidgetEvents.ERROR, vkidOnError)
+        .on(VKID.OAuthListInternalEvents.LOGIN_SUCCESS, function (payload) {
+          const code = payload.code;
+          const deviceId = payload.device_id;
 
-      floatingOneTap.render({
-        appName: 'MZ HELPER',
-        showAlternativeLogin: true
-      })
-      .on(VKID.WidgetEvents.ERROR, vkidOnError)
-      .on(VKID.FloatingOneTapInternalEvents.LOGIN_SUCCESS, function (payload) {
-        const code = payload.code;
-        const deviceId = payload.device_id;
+          VKID.Auth.exchangeCode(code, deviceId)
+            .then(vkidOnSuccess)
+            .catch(vkidOnError);
+        });
 
-        VKID.Auth.exchangeCode(code, deviceId)
-          .then(vkidOnSuccess)
-          .catch(vkidOnError);
-      });
+        function vkidOnSuccess(data) {
+          console.log('Авторизация успешна!', data);
+          // Здесь можно обработать данные (например, сохранить токен)
+          // А после успешной авторизации сделать редирект:
+          window.location.href = '/mz/main.html';
+        }
 
-      function vkidOnSuccess(data) {
-        console.log('Авторизация прошла успешно', data);
-        floatingOneTap.close();
-
-        // Можно сохранить данные, если нужно
-        localStorage.setItem('vk_access_token', data.access_token);
-        localStorage.setItem('vk_user_id', data.user.id);
-
-        // Перенаправление на основную страницу
-        window.location.href = '/mz/main.html';
+        function vkidOnError(error) {
+          console.error('Ошибка авторизации:', error);
+          alert('Ошибка при авторизации. Попробуйте позже.');
+        }
+      } else {
+        console.error('VKID SDK не загружен');
       }
-
-      function vkidOnError(error) {
-        console.error('Ошибка авторизации:', error);
-        alert('Ошибка авторизации. Попробуйте позже.');
-      }
-    } else {
-      console.error('VKID SDK не загружен');
-    }
-  </script>
+    </script>
+  </div>
 
 </body>
 </html>
