--- a/main.html
+++ b/main.html
@@ -111,7 +111,7 @@
             const userName = localStorage.getItem("userName");
             if (!userName) {
                 alert("Пожалуйста, выполните вход через VK.");
-                window.location.href = "login.html"; // Путь к странице входа
+                window.location.href = "index.html"; // Путь к странице входа
                 return;
             }
             document.getElementById("user-name").textContent = userName;
