--- a/index.html
+++ b/index.html
@@ -2,51 +2,77 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Вход — ЦГБ-Н</title>
-</head>
-<body>
-  <h1>Авторизация через VKID</h1>
-  <div id="vkid-container"></div>
+  <title>VKID Авторизация</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
-  <script>
-    if ('VKIDSDK' in window) {
-      const VKID = window.VKIDSDK;
 
-      VKID.Config.init({
-        app: 53689889,
-        redirectUrl: window.location.href,  // сам себя обрабатываем
-        responseMode: VKID.ConfigResponseMode.Callback,
-        source: VKID.ConfigSource.LOWCODE,
-        scope: '',
-      });
-
-      const oAuth = new VKID.OAuthList();
-
-      oAuth.render({
-        container: document.getElementById("vkid-container"),
-        oauthList: ['vkid']
-      })
-      .on(VKID.WidgetEvents.ERROR, (error) => {
-        alert("Ошибка входа: " + JSON.stringify(error));
-      })
-      .on(VKID.OAuthListInternalEvents.LOGIN_SUCCESS, function(payload) {
-        const code = payload.code;
-        const deviceId = payload.device_id;
-
-        VKID.Auth.exchangeCode(code, deviceId)
-          .then(data => {
-            const userName = data.user_info?.name || "Пользователь";
-            localStorage.setItem("userName", userName);
-
-            // Успешно, редиректим на главную страницу
-            window.location.href = "main.html";
-          })
-          .catch(err => {
-            alert("Ошибка обмена кода: " + JSON.stringify(err));
-          });
-      });
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: Arial, sans-serif;
     }
-  </script>
+    div {
+      /* Контейнер, куда вставляется виджет */
+      min-width: 280px;
+    }
+  </style>
+</head>
+<body>
+
+  <div>
+    <script type="text/javascript">
+      if ('VKIDSDK' in window) {
+        const VKID = window.VKIDSDK;
+
+        VKID.Config.init({
+          app: 53689889,
+          redirectUrl: 'https://golfo-developer.github.io/mz/',
+          responseMode: VKID.ConfigResponseMode.Callback,
+          source: VKID.ConfigSource.LOWCODE,
+          scope: '', // Заполните нужными доступами по необходимости
+        });
+
+        const oAuth = new VKID.OAuthList();
+
+        oAuth.render({
+          container: document.currentScript.parentElement,
+          oauthList: [
+            'vkid'
+          ]
+        })
+        .on(VKID.WidgetEvents.ERROR, vkidOnError)
+        .on(VKID.OAuthListInternalEvents.LOGIN_SUCCESS, function (payload) {
+          const code = payload.code;
+          const deviceId = payload.device_id;
+
+          VKID.Auth.exchangeCode(code, deviceId)
+            .then(vkidOnSuccess)
+            .catch(vkidOnError);
+        });
+
+        function vkidOnSuccess(data) {
+          console.log('Авторизация успешна!', data);
+          // Здесь можно обработать данные (например, сохранить токен)
+          // А после успешной авторизации сделать редирект:
+          window.location.href = '/mz/main.html';
+        }
+
+        function vkidOnError(error) {
+          console.error('Ошибка авторизации:', error);
+          alert('Ошибка при авторизации. Попробуйте позже.');
+        }
+      } else {
+        console.error('VKID SDK не загружен');
+      }
+    </script>
+  </div>
+
 </body>
 </html>
