--- a/index.html
+++ b/index.html
@@ -2,41 +2,130 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Вход | ЦГБ-Н</title>
+  <title>Вход — Министерство здравоохранения</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #111;
+      color: #fff;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 50px;
+      background-color: #000;
+    }
+
+    header h1 {
+      font-size: 22px;
+    }
+
+    nav a {
+      color: #ccc;
+      text-decoration: none;
+      margin: 0 10px;
+      font-size: 14px;
+    }
+
+    .login-box {
+      margin: auto;
+      background-color: #1c1c1c;
+      padding: 30px 40px;
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    }
+
+    .login-box h2 {
+      margin-bottom: 20px;
+    }
+
+    .vk-button {
+      background-color: #0077FF;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      background: #f2f2f2;
-      margin: 0;
+      gap: 10px;
     }
 
-    #login-box {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      text-align: center;
+    .vk-button i {
+      font-size: 20px;
     }
 
-    h1 {
-      font-size: 22px;
-      margin-bottom: 20px;
+    footer {
+      padding: 20px 50px;
+      background-color: #000;
+      font-size: 13px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #888;
+    }
+
+    footer a {
+      color: #888;
+      text-decoration: none;
+      margin-left: 20px;
     }
   </style>
 </head>
 <body>
-  <div id="login-box">
-    <h1>Вход через VK ID</h1>
-    <div id="vkid-container"></div>
+
+  <header>
+    <h1>🛡 Министерство здравоохранения</h1>
+    <nav>
+      <a href="#">Как вступить</a>
+      <a href="#">ЖА для ПК</a>
+      <a href="#">О нас</a>
+    </nav>
+    <button style="background: #e74c3c; color: white; border: none; padding: 10px 15px; border-radius: 8px;">Панель управления</button>
+  </header>
+
+  <div class="login-box">
+    <h2>Вход</h2>
+    <button class="vk-button" onclick="showVKID()">
+      <i class="fab fa-vk"></i> Войти с помощью VK ID
+    </button>
+    <div id="vkid-container" style="margin-top: 20px;"></div>
   </div>
 
+  <footer>
+    <div>
+      © 2022 – 2025 GTM. Все права защищены. (v.1.0.9)
+    </div>
+    <div>
+      <a href="#">Статистика</a>
+      <a href="#">Форум</a>
+      <a href="#">Сообщить об ошибке</a>
+    </div>
+  </footer>
+
   <script src="https://unpkg.com/@vkid/sdk@2.25.0/dist-sdk/umd/index.js"></script>
-  <script type="text/javascript">
-    if ('VKIDSDK' in window) {
+  <script>
+    let widgetRendered = false;
+
+    function showVKID() {
+      if (widgetRendered) return;
+
       const VKID = window.VKIDSDK;
 
       VKID.Config.init({
@@ -63,16 +152,19 @@
           .catch(vkidOnError);
       });
 
-      function vkidOnSuccess(data) {
-        const userName = data.user_info?.name || "Пользователь";
-        localStorage.setItem("userName", userName);
-        window.location.href = "main.html";
-      }
+      widgetRendered = true;
+    }
 
-      function vkidOnError(error) {
-        alert("Ошибка входа: " + JSON.stringify(error));
-      }
+    function vkidOnSuccess(data) {
+      const userName = data.user_info?.name || "Пользователь";
+      localStorage.setItem("userName", userName);
+      window.location.href = "main.html";
+    }
+
+    function vkidOnError(error) {
+      alert("Ошибка входа: " + JSON.stringify(error));
     }
   </script>
+
 </body>
 </html>
